lox-tests/tests/call/num.stderr
ERROR: Can only call objects of type function or class, not number
 --> 1:1
  |
1 | 123(); // expect runtime error: Can only call functions and classes.
  | ^---^
